更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -10,8 +10,6 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=1
-CONFIG_ALL_KMODS=y
-CONFIG_DEVEL=y
 
 # ======================
 # 编译工具链优化
@@ -213,9 +211,20 @@ CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_SKBEDIT=y
 
 # ======================
-# NFTables硬件加速 (完全卸载支持)
+# Netfilter核心框架配置
 # ======================
 CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NETFILTER_INGRESS=y
+CONFIG_NETFILTER_NETLINK=y
+CONFIG_NETFILTER_FAMILY_BRIDGE=y
+CONFIG_NETFILTER_FAMILY_ARP=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XTABLES_COMPAT=y
+
+# ======================
+# NFTables核心框架与硬件加速
+# ======================
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
@@ -223,23 +232,12 @@ CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
 CONFIG_NF_TABLES_ARP=y
 CONFIG_NF_TABLES_BRIDGE=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
-CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CT_NETLINK=y
-CONFIG_NF_NAT=y
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NF_NAT_REDIRECT=y
-CONFIG_NF_NAT_FULLCONE=y
-CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_INET=y
-CONFIG_NF_FLOW_TABLE_IPV4=y
-CONFIG_NF_FLOW_TABLE_IPV6=y
-CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_NF_TABLES_SET=y
+CONFIG_NF_TABLES_COUNTER=y
+CONFIG_NF_TABLES_QUOTA=y
+CONFIG_NF_TABLES_LIMIT=y
+CONFIG_NF_TABLES_LOG=y
+CONFIG_NF_TABLES_SYNPROXY=y
 CONFIG_NFT_SYNPROXY=y
 CONFIG_NFT_TPROXY=y
 CONFIG_NFT_FIB=y
@@ -250,6 +248,95 @@ CONFIG_NFT_XFRM=y
 CONFIG_NFT_QUEUE=y
 CONFIG_NFT_COMPAT=y
 CONFIG_NFT_NAT=y
+CONFIG_NFT_MASQ=y
+CONFIG_NFT_REDIR=y
+CONFIG_NFT_REJECT=y
+CONFIG_NFT_REJECT_INET=y
+CONFIG_NFT_HASH=y
+CONFIG_NFT_CONNLIMIT=y
+CONFIG_NFT_CT=y
+CONFIG_NFT_OBJREF=y
+CONFIG_NFT_OSF=y
+CONFIG_NFT_RT=y
+CONFIG_NFT_SECMARK=y
+CONFIG_NFT_SOCKET=y
+CONFIG_NFT_TUNNEL=y
+CONFIG_NFT_META_BRIDGE=y
+CONFIG_NF_FLOW_TABLE=y
+CONFIG_NF_FLOW_TABLE_INET=y
+CONFIG_NF_FLOW_TABLE_IPV4=y
+CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_NF_FLOW_TABLE_HW=y
+
+# ======================
+# NFTables 增强配置
+# ======================
+CONFIG_NFT_NUMGEN=y
+CONFIG_NFT_BITWISE=y
+CONFIG_NFT_CT_TIMEOUT=y
+CONFIG_NFT_CT_EXPECT=y
+CONFIG_NFT_FLOW_OFFLOAD=y
+CONFIG_NFT_FWD_NETDEV=y
+CONFIG_NFT_DUP_NETDEV=y
+CONFIG_NFT_FIB_NETDEV=y
+
+# ======================
+# Connection Tracking配置
+# ======================
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
+CONFIG_NF_CONNTRACK_TIMEOUT=y
+CONFIG_NF_CONNTRACK_TIMESTAMP=y
+CONFIG_NF_CONNTRACK_LABELS=y
+CONFIG_NF_CONNTRACK_ZONES=y
+CONFIG_NF_CONNTRACK_PROCFS=y
+CONFIG_NF_CT_PROTO_DCCP=y
+CONFIG_NF_CT_PROTO_SCTP=y
+CONFIG_NF_CT_PROTO_UDPLITE=y
+CONFIG_NF_CT_NETLINK=y
+CONFIG_NF_CT_NETLINK_TIMEOUT=y
+CONFIG_NF_CT_NETLINK_HELPER=y
+
+# ======================
+# NAT转发与防火墙核心
+# ======================
+CONFIG_NF_NAT=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NF_NAT_REDIRECT=y
+CONFIG_NF_NAT_FULLCONE=y
+CONFIG_NF_NAT_PPTP=y
+CONFIG_NF_NAT_H323=y
+CONFIG_NF_NAT_AMANDA=y
+CONFIG_NF_NAT_TFTP=y
+CONFIG_NF_NAT_FTP=y
+CONFIG_NF_NAT_SIP=y
+CONFIG_NF_NAT_RTSP=y
+
+# ======================
+# IPTables兼容层 (传统支持)
+# ======================
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_FILTER=y
+CONFIG_IP_NF_MANGLE=y
+CONFIG_IP_NF_NAT=y
+CONFIG_IP_NF_RAW=y
+CONFIG_IP_NF_SECURITY=y
+CONFIG_IP_NF_ARPTABLES=y
+CONFIG_IP_NF_ARPFILTER=y
+CONFIG_IP_NF_ARP_MANGLE=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_NAT=y
+CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_SECURITY=y
 
 # ======================
 # I/O调度与存储优化
@@ -279,41 +366,275 @@ CONFIG_INTEL_TURBO_MAX_3=y
 CONFIG_X86_ACPI_CPUFREQ=y
 
 # ======================
-# 内核模块配置 - 硬件加速核心
+# 内核模块配置 - Netfilter核心模块
 # ======================
 CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-fib=y
 CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-queue=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+CONFIG_PACKAGE_kmod-nft-synproxy=y
+CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-nft-fib=y
+CONFIG_PACKAGE_kmod-nft-xfrm=y
+CONFIG_PACKAGE_kmod-nft-ct=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-reject=y
+CONFIG_PACKAGE_kmod-nft-osf=y
+CONFIG_PACKAGE_kmod-nft-rt=y
+CONFIG_PACKAGE_kmod-nft-connlimit=y
+CONFIG_PACKAGE_kmod-nft-counter=y
+CONFIG_PACKAGE_kmod-nft-quota=y
+CONFIG_PACKAGE_kmod-nft-log=y
+CONFIG_PACKAGE_kmod-nft-limit=y
+CONFIG_PACKAGE_kmod-nft-masq=y
+CONFIG_PACKAGE_kmod-nft-redir=y
+CONFIG_PACKAGE_kmod-nft-tunnel=y
+
+# ======================
+# NFTables 增强内核模块
+# ======================
+CONFIG_PACKAGE_kmod-nft-numgen=y
+CONFIG_PACKAGE_kmod-nft-chain-nat=y
+CONFIG_PACKAGE_kmod-nft-flow-offload=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-nat6=y
+
+# ======================
+# 内核模块配置 - Connection Tracking
+# ======================
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
+CONFIG_PACKAGE_kmod-nf-conntrack-extra=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-nat-extra=y
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-nf-tproxy=y
+CONFIG_PACKAGE_kmod-nf-socket=y
+
+# ======================
+# 内核模块配置 - IPTables兼容模块
+# ======================
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-filter=y
+CONFIG_PACKAGE_kmod-ipt-ipset=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
+CONFIG_PACKAGE_kmod-ipt-raw6=y
+CONFIG_PACKAGE_kmod-ipt-ulog=y
+CONFIG_PACKAGE_kmod-ipt-account=y
+CONFIG_PACKAGE_kmod-arptables=y
+CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ip6tables-extra=y
+
+# ======================
+# IPTables 增强内核模块
+# ======================
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-ipt-ah=y
+CONFIG_PACKAGE_kmod-ipt-cluster=y
+CONFIG_PACKAGE_kmod-ipt-clusterip=y
+CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
+CONFIG_PACKAGE_kmod-ipt-debug=y
+CONFIG_PACKAGE_kmod-ipt-delude=y
+CONFIG_PACKAGE_kmod-ipt-dhcpmac=y
+CONFIG_PACKAGE_kmod-ipt-dnetmap=y
+CONFIG_PACKAGE_kmod-ipt-fuzzy=y
+CONFIG_PACKAGE_kmod-ipt-geoip=y
+CONFIG_PACKAGE_kmod-ipt-hashlimit=y
+CONFIG_PACKAGE_kmod-ipt-iface=y
+CONFIG_PACKAGE_kmod-ipt-ipmark=y
+CONFIG_PACKAGE_kmod-ipt-ipp2p=y
+CONFIG_PACKAGE_kmod-ipt-iprange=y
+CONFIG_PACKAGE_kmod-ipt-ipsec=y
+CONFIG_PACKAGE_kmod-ipt-ipv4options=y
+CONFIG_PACKAGE_kmod-ipt-led=y
+CONFIG_PACKAGE_kmod-ipt-length2=y
+CONFIG_PACKAGE_kmod-ipt-logmark=y
+CONFIG_PACKAGE_kmod-ipt-lscan=y
+CONFIG_PACKAGE_kmod-ipt-lua=y
+CONFIG_PACKAGE_kmod-ipt-natpage=y
+CONFIG_PACKAGE_kmod-ipt-nflog=y
+CONFIG_PACKAGE_kmod-ipt-nfqueue=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-ipt-physdev=y
+CONFIG_PACKAGE_kmod-ipt-proto=y
+CONFIG_PACKAGE_kmod-ipt-psd=y
+CONFIG_PACKAGE_kmod-ipt-quota2=y
+CONFIG_PACKAGE_kmod-ipt-rpfilter=y
+CONFIG_PACKAGE_kmod-ipt-rtpengine=y
+CONFIG_PACKAGE_kmod-ipt-socket=y
+CONFIG_PACKAGE_kmod-ipt-sysrq=y
+CONFIG_PACKAGE_kmod-ipt-tarpit=y
+CONFIG_PACKAGE_kmod-ipt-tee=y
+CONFIG_PACKAGE_kmod-ipt-time=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
+CONFIG_PACKAGE_kmod-ipt-u32=y
+
+# ======================
+# 内核模块配置 - 调度与QoS
+# ======================
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-sched-ctinfo=y
+CONFIG_PACKAGE_kmod-sched-flower=y
+CONFIG_PACKAGE_kmod-sched-mqprio=y
 CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-sched-act-connmark=y
+CONFIG_PACKAGE_kmod-sched-act-ct=y
+CONFIG_PACKAGE_kmod-sched-act-gate=y
+CONFIG_PACKAGE_kmod-sched-act-sample=y
+CONFIG_PACKAGE_kmod-sched-act-vlan=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ppp=y
+CONFIG_PACKAGE_kmod-pppoe=y
+CONFIG_PACKAGE_kmod-pppox=y
+CONFIG_PACKAGE_kmod-gre=y
+CONFIG_PACKAGE_kmod-gre6=y
+CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 
 # ======================
-# 用户态工具包 - 硬件监控与优化
+# 内核模块配置 - 网络硬件加速
+# ======================
+CONFIG_PACKAGE_kmod-dma-buf=y
+CONFIG_PACKAGE_kmod-hwmon-core=y
+CONFIG_PACKAGE_kmod-i2c-core=y
+CONFIG_PACKAGE_kmod-mdio-devres=y
+CONFIG_PACKAGE_kmod-phy-intel=y
+CONFIG_PACKAGE_kmod-thermal=y
+CONFIG_PACKAGE_kmod-igc=y
+CONFIG_PACKAGE_kmod-igc-hwmon=y
+
+# ======================
+# 用户态工具包 - Netfilter管理工具
+# ======================
+CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_nftables-nojson=y
+CONFIG_PACKAGE_arptables=y
+CONFIG_PACKAGE_ebtables=y
+CONFIG_PACKAGE_ebtables-utils=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_ipset-dns=y
+CONFIG_PACKAGE_xtables-legacy=y
+CONFIG_PACKAGE_xtables-nft=y
+CONFIG_PACKAGE_conntrack-tools=y
+CONFIG_PACKAGE_conntrack=y
+CONFIG_PACKAGE_conntrackd=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_firewall=y
+
+# ======================
+# IPTables 增强用户态工具
+# ======================
+CONFIG_PACKAGE_iptables-mod-account=y
+CONFIG_PACKAGE_iptables-mod-chaos=y
+CONFIG_PACKAGE_iptables-mod-checksum=y
+CONFIG_PACKAGE_iptables-mod-cluster=y
+CONFIG_PACKAGE_iptables-mod-clusterip=y
+CONFIG_PACKAGE_iptables-mod-condition=y
+CONFIG_PACKAGE_iptables-mod-delude=y
+CONFIG_PACKAGE_iptables-mod-dhcpmac=y
+CONFIG_PACKAGE_iptables-mod-dnetmap=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_iptables-mod-fuzzy=y
+CONFIG_PACKAGE_iptables-mod-geoip=y
+CONFIG_PACKAGE_iptables-mod-hashlimit=y
+CONFIG_PACKAGE_iptables-mod-iface=y
+CONFIG_PACKAGE_iptables-mod-ipmark=y
+CONFIG_PACKAGE_iptables-mod-ipp2p=y
+CONFIG_PACKAGE_iptables-mod-iprange=y
+CONFIG_PACKAGE_iptables-mod-ipsec=y
+CONFIG_PACKAGE_iptables-mod-ipv4options=y
+CONFIG_PACKAGE_iptables-mod-led=y
+CONFIG_PACKAGE_iptables-mod-length2=y
+CONFIG_PACKAGE_iptables-mod-logmark=y
+CONFIG_PACKAGE_iptables-mod-lscan=y
+CONFIG_PACKAGE_iptables-mod-lua=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-nat6=y
+CONFIG_PACKAGE_iptables-mod-natpage=y
+CONFIG_PACKAGE_iptables-mod-nflog=y
+CONFIG_PACKAGE_iptables-mod-nfqueue=y
+CONFIG_PACKAGE_iptables-mod-physdev=y
+CONFIG_PACKAGE_iptables-mod-proto=y
+CONFIG_PACKAGE_iptables-mod-psd=y
+CONFIG_PACKAGE_iptables-mod-quota2=y
+CONFIG_PACKAGE_iptables-mod-rpfilter=y
+CONFIG_PACKAGE_iptables-mod-rtpengine=y
+CONFIG_PACKAGE_iptables-mod-socket=y
+CONFIG_PACKAGE_iptables-mod-sysrq=y
+CONFIG_PACKAGE_iptables-mod-tarpit=y
+CONFIG_PACKAGE_iptables-mod-tee=y
+CONFIG_PACKAGE_iptables-mod-time=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
+CONFIG_PACKAGE_iptables-mod-u32=y
+CONFIG_PACKAGE_iptables-mod-ulog=y
+
+# ======================
+# 用户态工具包 - 网络基础工具
 # ======================
 CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3-ssl=y
 CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_ip-bridge=y
+CONFIG_PACKAGE_ip-tiny=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_uclient-fetch=y
+CONFIG_PACKAGE_libustream-openssl=y
+
+# ======================
+# 用户态工具包 - Netfilter库依赖
+# ======================
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libmnl=y
-CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_libipset=y
+CONFIG_PACKAGE_libxtables=y
+CONFIG_PACKAGE_libip4tc=y
+CONFIG_PACKAGE_libip6tc=y
+CONFIG_PACKAGE_libiptc=y
+CONFIG_PACKAGE_libxt-connmark=y
+CONFIG_PACKAGE_libxt-conntrack=y
+CONFIG_PACKAGE_libxt-multiport=y
+CONFIG_PACKAGE_libxt-state=y
+CONFIG_PACKAGE_libxt-tcp=y
+CONFIG_PACKAGE_libxt-udp=y
+
+# ======================
+# 用户态工具包 - 系统工具
+# ======================
 CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_gawk=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_coreutils-sort=y
+CONFIG_PACKAGE_procps-ng=y
+CONFIG_PACKAGE_procps-ng-top=y
+CONFIG_PACKAGE_procps-ng-free=y
+CONFIG_PACKAGE_procps-ng-ps=y
+CONFIG_PACKAGE_procps-ng-pkill=y
+CONFIG_PACKAGE_procps-ng-pgrep=y
+CONFIG_PACKAGE_procps-ng-pmap=y
+CONFIG_PACKAGE_procps-ng-pwdx=y
+CONFIG_PACKAGE_procps-ng-w=y
 
 # ======================
 # LuCI应用模块 (网络优化版)
@@ -325,3 +646,4 @@ CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-adblock-fast=y
+CONFIG_PACKAGE_luci-app-nftables=y
