更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -44,6 +44,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_INTEL_PSTATE_ACTIVE=y
 CONFIG_INTEL_CPUFREQ=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
@@ -60,6 +61,7 @@ CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_PSI=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_IRQ_BALANCE=y
 CONFIG_IRQ_POLL=y
 CONFIG_GENERIC_PENDING_IRQ=y
@@ -69,6 +71,7 @@ CONFIG_CPU_ISOLATION=y
 CONFIG_SCHED_MUQSS=n
 CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
+CONFIG_IRQ_FASTEOI_HIERARCHY_HANDLERS=y
 
 # ======================
 # 时间与时钟精度优化
@@ -88,12 +91,15 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=256
 CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
+CONFIG_PAGE_POOL_RX=y
+CONFIG_PAGE_POOL_DMA_OPT=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTE=384
 CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_CMA=y
+CONFIG_DMA_NEED_PCI_MAPPING_STATE=y
 CONFIG_ZONE_DMA32=y
 CONFIG_COMPACTION=y
 CONFIG_LRU_GEN=y
@@ -103,6 +109,8 @@ CONFIG_LRU_GEN_ENABLED=y
 # Intel硬件深度优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
@@ -113,11 +121,20 @@ CONFIG_IGC_LRO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
 CONFIG_IGC_VMDQ=y
+CONFIG_IGC_VMDQ_RSS=y
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_VLAN_STRIPPING=y
 CONFIG_IGC_VLAN_INSERTION=y
 CONFIG_IGC_VLAN_FILTERING=y
 CONFIG_IGC_HW_TIMESTAMPING=y
+CONFIG_IGC_DCA=y
+CONFIG_IGC_VLAN_STRIPPING_RX=y
+CONFIG_IGC_VLAN_INSERTION_TX=y
+CONFIG_IGC_HW_CRC_STRIPPING=y
+CONFIG_IGC_JUMBO_FRAMES=y
+CONFIG_IGC_RX_COPYBREAK=512
+CONFIG_IGC_USE_RX_POLL=y
+CONFIG_IGC_NAPI_WEIGHT=64
 
 # ======================
 # 网络硬件卸载加速配置
@@ -127,13 +144,17 @@ CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=128
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+CONFIG_NET_RX_BUSY_POLL_BUDGET_RATIO=50
 CONFIG_NET_DEVLINK=y
 CONFIG_DIMLIB=y
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_NET_SWITCHDEV=y
 CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_NET_VENDOR_INTEL=y
+CONFIG_TCP_AUTOTUNING=y
+CONFIG_TCP_ZERO_COPY_RECEIVE=y
+CONFIG_NET_IP_TUNNEL_DEPRECATED=n
 
 # ======================
 # DMA与内存映射优化
@@ -142,6 +163,7 @@ CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_IOMMU_DEFAULT=y
+CONFIG_IOMMU_DMA=y
 CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_SVM=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
@@ -161,6 +183,8 @@ CONFIG_PCIEAER=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
+CONFIG_GENERIC_MSI_IRQ=y
+CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 
 # ======================
 # 网络协议栈硬件卸载
@@ -323,7 +347,7 @@ CONFIG_DEFAULT_MQ_IOSCHED="kyber"
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
 CONFIG_BLK_CGROUP=y
-CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_BLK_DEV_THROTLING=y
 
 # ======================
 # 电源管理优化 (J4125专用)
@@ -333,8 +357,7 @@ CONFIG_PM_SLEEP=y
 CONFIG_SUSPEND=y
 CONFIG_ACPI=y
 CONFIG_ACPI_THERMAL=y
-CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_CPU_IDLE=y
+CONFIG_ACPI_CPPC_LIB=y
 CONFIG_ACPI_CPU_FREQ_PSS=y
 CONFIG_ACPI_PROCESSOR=y
 CONFIG_INTEL_RAPL=y
