--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -9,20 +9,18 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_GRUB_TIMEOUT=1
 
 # ======================
-# 编译工具链与优化
+# 编译工具链优化
 # ======================
-CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
-CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_FULL=y
+CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_TOOLCHAINOPTS=y
+CONFIG_GCC_USE_GRAPHITE=y
+CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_KERNEL_OPTIMIZE_O3=y
-CONFIG_CC_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta"
 
 # ======================
 # x86架构核心配置
@@ -33,165 +31,480 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_INTEL_PSTATE=y
-CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_SCHED_MC=y
-CONFIG_SCHED_SMT=y
+CONFIG_X86_INTEL_LPSS=y
 
 # ======================
-# Intel J4125特定优化
+# CPU调度与频率优化 (J4125专用)
 # ======================
-CONFIG_MTRR=y
-CONFIG_X86_PAT=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_X86_INTEL_LPSS=y
-CONFIG_X86_MSR=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_INTEL_PSTATE=y
+CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_INTEL_PSTATE_ACTIVE=y
+CONFIG_INTEL_CPUFREQ=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=y
+CONFIG_SCHED_CLUSTER=y
+CONFIG_SCHED_CORE=y
+CONFIG_SCHED_AUTOGROUP=y
 
 # ======================
-# Intel硬件优化 (J4125+I226)
+# 中断与进程调度优化
+# ======================
+CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_IRQ_FORCED_THREADING=y
+CONFIG_PSI=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_IRQ_DOMAIN=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
+CONFIG_IRQ_BALANCE=y
+CONFIG_IRQ_POLL=y
+CONFIG_GENERIC_PENDING_IRQ=y
+CONFIG_SCHED_THERMAL_PRESSURE=y
+CONFIG_IRQ_FORCED_THREADING_DEFAULT=y
+CONFIG_CPU_ISOLATION=y
+CONFIG_SCHED_MUQSS=n
+CONFIG_SCHED_INFO=y
+CONFIG_SCHEDSTATS=y
+CONFIG_IRQ_FASTEOI_HIERARCHY_HANDLERS=y
+
+# ======================
+# 时间与时钟精度优化
+# ======================
+CONFIG_NO_HZ_IDLE=y
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ=y
+CONFIG_HZ_300=y
+CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_TICK_CPU_ACCOUNTING=y
+
+# ======================
+# 内存管理优化 (网络性能专用)
+# ======================
+CONFIG_SLUB=y
+CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=256
+CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
+CONFIG_PAGE_POOL_RX=y
+CONFIG_PAGE_POOL_DMA_OPT=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_CMA=y
+CONFIG_CMA_SIZE_MBYTE=384
+CONFIG_CMA_SIZE_PERCENTAGE=20
+CONFIG_DMA_CMA=y
+CONFIG_DMA_NEED_PCI_MAPPING_STATE=y
+CONFIG_ZONE_DMA32=y
+CONFIG_COMPACTION=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+
+# ======================
+# Intel硬件深度优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
+CONFIG_IGC_LRO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_IRQ_FORCED_THREADING=y
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_IRQ_DOMAIN=y
-CONFIG_IRQ_BALANCE=y
+CONFIG_IGC_VMDQ=y
+CONFIG_IGC_VMDQ_RSS=y
+CONFIG_IGC_HWMON=y
+CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_VLAN_INSERTION=y
+CONFIG_IGC_VLAN_FILTERING=y
+CONFIG_IGC_HW_TIMESTAMPING=y
+CONFIG_IGC_DCA=y
+CONFIG_IGC_VLAN_STRIPPING_RX=y
+CONFIG_IGC_VLAN_INSERTION_TX=y
+CONFIG_IGC_HW_CRC_STRIPPING=y
+CONFIG_IGC_JUMBO_FRAMES=y
+CONFIG_IGC_RX_COPYBREAK=512
+CONFIG_IGC_USE_RX_POLL=y
+CONFIG_IGC_NAPI_WEIGHT=64
+
+# ======================
+# 网络硬件卸载加速配置
+# ======================
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_TX_BUSY_POLL=y
-CONFIG_DMA_CMA=y
-CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=256
-CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_GENERIC_IRQ_MIGRATION=y
-CONFIG_HOTPLUG_CPU=y
-CONFIG_NET_SOCK_MSG=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+CONFIG_NET_RX_BUSY_POLL_BUDGET_RATIO=50
 CONFIG_NET_DEVLINK=y
-CONFIG_NET_HW_FLOW_OFFLOAD=y
+CONFIG_DIMLIB=y
+CONFIG_NET_FLOW_LIMIT=y
+CONFIG_NET_SWITCHDEV=y
+CONFIG_NET_L3_MASTER_DEV=y
+CONFIG_NET_VENDOR_INTEL=y
+CONFIG_TCP_AUTOTUNING=y
+CONFIG_TCP_ZERO_COPY_RECEIVE=y
+CONFIG_NET_IP_TUNNEL_DEPRECATED=n
 
 # ======================
-# 内存管理优化
+# DMA与内存映射优化
 # ======================
-CONFIG_SLUB=y
-CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
-CONFIG_PAGE_POOL=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
-CONFIG_ARCH_HAS_PREFETCH=y
-CONFIG_ARCH_HAS_PREFETCHW=y
+CONFIG_DMA_DIRECT_REMAP=y
+CONFIG_SWIOTLB=y
+CONFIG_IOMMU_SUPPORT=y
+CONFIG_IOMMU_DEFAULT=y
+CONFIG_IOMMU_DMA=y
+CONFIG_INTEL_IOMMU=y
+CONFIG_INTEL_IOMMU_SVM=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_DMA_REMAP=y
+CONFIG_DMA_SHARED_BUFFER=y
 
 # ======================
-# 网络协议栈优化
+# PCIe与硬件总线优化
 # ======================
-CONFIG_KERNEL_TCP_CONG_BBR3=y
-CONFIG_TCP_CONG_BBR=y
+CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
+CONFIG_PCIEASPM=y
+CONFIG_PCIEASPM_PERFORMANCE=y
+CONFIG_PCIE_PTM=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCIEAER=y
+CONFIG_PCI_IOV=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
+CONFIG_GENERIC_MSI_IRQ=y
+CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
+
+# ======================
+# 网络协议栈硬件卸载
+# ======================
+CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
-CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_TCP_BBR_ECN=y
+CONFIG_TCP_BBR_ECN_AGGR=y
+CONFIG_TCP_BBR_PROBE_RTT=y
 CONFIG_TCP_FASTOPEN=y
+CONFIG_TCP_FASTOPEN_KEY=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
-CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_FQ=y
-CONFIG_NET_SCH_CAKE=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_TCP_NOTSENT_LOWAT=32768
 CONFIG_PACKET=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IPV6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_IPV6_PRIVACY=y
-CONFIG_GRO=y
-CONFIG_GSO=y
-CONFIG_PACKAGE_nat6=y
-CONFIG_PACKAGE_ip6tables-nft=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-iprange=y
-CONFIG_PACKAGE_iptables-mod-nat-extra=y
-CONFIG_PACKAGE_iptables-mod-socket=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
-CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_xtables-nft=y
+CONFIG_INET_ESP=y
+CONFIG_INET_IPCOMP=y
+CONFIG_NET_UDP_TUNNEL=y
+CONFIG_NET_IP_TUNNEL=y
+CONFIG_NET_IPGRE=y
+CONFIG_NET_IPVTI=y
+CONFIG_NET_FOU=y
+CONFIG_NET_FOU_IP_TUNNELS=y
 
 # ======================
-# Netfilter/NAT配置
+# 硬件流量分类与QoS卸载
+# ======================
+CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_FQ=y
+CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_CAKE=y
+CONFIG_NET_SCH_ETF=y
+CONFIG_NET_SCH_TAPRIO=y
+CONFIG_NET_SCH_MQPRIO_LIB=y
+CONFIG_NET_CLS=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_ACT_GACT=y
+CONFIG_NET_ACT_SKBEDIT=y
+
+# ======================
+# Netfilter核心框架配置
 # ======================
 CONFIG_NETFILTER=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CT_NETLINK=y
-CONFIG_NF_NAT=y
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NETFILTER_INGRESS=y
+CONFIG_NETFILTER_NETLINK=y
+CONFIG_NETFILTER_FAMILY_BRIDGE=y
+CONFIG_NETFILTER_FAMILY_ARP=y
+
+# ======================
+# NFTables核心框架与硬件加速
+# ======================
 CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES_ARP=y
+CONFIG_NF_TABLES_BRIDGE=y
+CONFIG_NF_TABLES_SET=y
+CONFIG_NF_TABLES_COUNTER=y
+CONFIG_NF_TABLES_QUOTA=y
+CONFIG_NF_TABLES_LIMIT=y
+CONFIG_NF_TABLES_LOG=y
+CONFIG_NF_TABLES_SYNPROXY=y
+CONFIG_NFT_SYNPROXY=y
+CONFIG_NFT_TPROXY=y
+CONFIG_NFT_FIB=y
+CONFIG_NFT_FIB_IPV4=y
+CONFIG_NFT_FIB_IPV6=y
+CONFIG_NFT_OFFLOAD=y
+CONFIG_NFT_XFRM=y
+CONFIG_NFT_QUEUE=y
+CONFIG_NFT_COMPAT=y
 CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
-CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
+CONFIG_NFT_REDIR=y
+CONFIG_NFT_REJECT=y
+CONFIG_NFT_REJECT_INET=y
+CONFIG_NFT_HASH=y
+CONFIG_NFT_CONNLIMIT=y
+CONFIG_NFT_CT=y
+CONFIG_NFT_OBJREF=y
+CONFIG_NFT_OSF=y
+CONFIG_NFT_RT=y
+CONFIG_NFT_SECMARK=y
+CONFIG_NFT_SOCKET=y
+CONFIG_NFT_TUNNEL=y
+CONFIG_NFT_META_BRIDGE=y
 CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_NF_FLOW_TABLE_HW=y
 
 # ======================
-# 内核模块配置
+# NFTables 增强配置
 # ======================
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_NFT_NUMGEN=y
+CONFIG_NFT_BITWISE=y
+CONFIG_NFT_CT_TIMEOUT=y
+CONFIG_NFT_CT_EXPECT=y
+CONFIG_NFT_FLOW_OFFLOAD=y
+CONFIG_NFT_FWD_NETDEV=y
+CONFIG_NFT_DUP_NETDEV=y
+CONFIG_NFT_FIB_NETDEV=y
+
+# ======================
+# Connection Tracking配置
+# ======================
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
+CONFIG_NF_CONNTRACK_TIMEOUT=y
+CONFIG_NF_CONNTRACK_TIMESTAMP=y
+CONFIG_NF_CONNTRACK_LABELS=y
+CONFIG_NF_CONNTRACK_ZONES=y
+CONFIG_NF_CONNTRACK_PROCFS=y
+CONFIG_NF_CT_PROTO_DCCP=y
+CONFIG_NF_CT_PROTO_SCTP=y
+CONFIG_NF_CT_PROTO_UDPLITE=y
+CONFIG_NF_CT_NETLINK=y
+CONFIG_NF_CT_NETLINK_TIMEOUT=y
+CONFIG_NF_CT_NETLINK_HELPER=y
+
+# ======================
+# NAT转发与防火墙核心
+# ======================
+CONFIG_NF_NAT=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NF_NAT_REDIRECT=y
+CONFIG_NF_NAT_FULLCONE=y
+CONFIG_NF_NAT_PPTP=y
+CONFIG_NF_NAT_H323=y
+CONFIG_NF_NAT_AMANDA=y
+CONFIG_NF_NAT_TFTP=y
+CONFIG_NF_NAT_FTP=y
+CONFIG_NF_NAT_SIP=y
+CONFIG_NF_NAT_RTSP=y
+
+# ======================
+# I/O调度与存储优化
+# ======================
+CONFIG_MQ_IOSCHED_DEADLINE=y
+CONFIG_MQ_IOSCHED_KYBER=y
+CONFIG_DEFAULT_MQ_IOSCHED="kyber"
+CONFIG_BLK_WBT=y
+CONFIG_BLK_WBT_MQ=y
+CONFIG_BLK_CGROUP=y
+CONFIG_BLK_DEV_THROTLING=y
+
+# ======================
+# 电源管理优化 (J4125专用)
+# ======================
+CONFIG_PM=y
+CONFIG_PM_SLEEP=y
+CONFIG_SUSPEND=y
+CONFIG_ACPI=y
+CONFIG_ACPI_THERMAL=y
+CONFIG_ACPI_CPPC_LIB=y
+CONFIG_ACPI_CPU_FREQ_PSS=y
+CONFIG_ACPI_PROCESSOR=y
+CONFIG_INTEL_RAPL=y
+CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_X86_ACPI_CPUFREQ=y
+
+# ======================
+# 内核模块配置 - Netfilter核心模块
+# ======================
 CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-queue=y
 CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-nf-socket=y
-CONFIG_PACKAGE_kmod-nf-conntrack=y
-CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-flow-table=y
-CONFIG_PACKAGE_kmod-sched=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+CONFIG_PACKAGE_kmod-nft-synproxy=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-nft-fib=y
+CONFIG_PACKAGE_kmod-nft-xfrm=y
+CONFIG_PACKAGE_kmod-nft-ct=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-reject=y
+CONFIG_PACKAGE_kmod-nft-osf=y
+CONFIG_PACKAGE_kmod-nft-rt=y
+CONFIG_PACKAGE_kmod-nft-connlimit=y
+CONFIG_PACKAGE_kmod-nft-counter=y
+CONFIG_PACKAGE_kmod-nft-quota=y
+CONFIG_PACKAGE_kmod-nft-log=y
+CONFIG_PACKAGE_kmod-nft-limit=y
+CONFIG_PACKAGE_kmod-nft-masq=y
+CONFIG_PACKAGE_kmod-nft-redir=y
+CONFIG_PACKAGE_kmod-nft-tunnel=y
 
 # ======================
-# 用户态工具包
+# NFTables 增强内核模块
+# ======================
+CONFIG_PACKAGE_kmod-nft-numgen=y
+CONFIG_PACKAGE_kmod-nft-chain-nat=y
+CONFIG_PACKAGE_kmod-nft-flow-offload=y
+# CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-nat6=y
+
+# ======================
+# 内核模块配置 - Connection Tracking
+# ======================
+CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-nf-conntrack6=y
+CONFIG_PACKAGE_kmod-nf-conntrack-extra=y
+CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-nat-extra=y
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nf-reject6=y
+CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-nf-tproxy=y
+CONFIG_PACKAGE_kmod-nf-socket=y
+
+# ======================
+# 内核模块配置 - 调度与QoS
+# ======================
+CONFIG_PACKAGE_kmod-sched=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-sched-ctinfo=y
+CONFIG_PACKAGE_kmod-sched-flower=y
+CONFIG_PACKAGE_kmod-sched-mqprio=y
+CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-sched-act-connmark=y
+CONFIG_PACKAGE_kmod-sched-act-ct=y
+CONFIG_PACKAGE_kmod-sched-act-gate=y
+CONFIG_PACKAGE_kmod-sched-act-sample=y
+CONFIG_PACKAGE_kmod-sched-act-vlan=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ppp=y
+CONFIG_PACKAGE_kmod-pppoe=y
+CONFIG_PACKAGE_kmod-pppox=y
+CONFIG_PACKAGE_kmod-gre=y
+CONFIG_PACKAGE_kmod-gre6=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-fs-squashfs=y
+
+# ======================
+# 内核模块配置 - 网络硬件加速
+# ======================
+CONFIG_PACKAGE_kmod-dma-buf=y
+CONFIG_PACKAGE_kmod-hwmon-core=y
+CONFIG_PACKAGE_kmod-i2c-core=y
+CONFIG_PACKAGE_kmod-mdio-devres=y
+CONFIG_PACKAGE_kmod-phy-intel=y
+CONFIG_PACKAGE_kmod-thermal=y
+CONFIG_PACKAGE_kmod-igc-hwmon=y
+
+# ======================
+# 用户态工具包 - Netfilter管理工具
+# ======================
+CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_nftables-nojson=y
+CONFIG_PACKAGE_ebtables=y
+CONFIG_PACKAGE_ebtables-utils=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_ipset-dns=y
+CONFIG_PACKAGE_conntrack-tools=y
+CONFIG_PACKAGE_conntrack=y
+CONFIG_PACKAGE_conntrackd=y
+CONFIG_PACKAGE_firewall4=y
+
+# ======================
+# 用户态工具包 - 网络基础工具
 # ======================
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3-ssl=y
 CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_ip-bridge=y
+CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_uclient-fetch=y
+CONFIG_PACKAGE_libustream-openssl=y
 
 # ======================
-# LuCI应用模块
+# 用户态工具包 - Netfilter库依赖
+# ======================
+CONFIG_PACKAGE_libnetfilter-conntrack=y
+CONFIG_PACKAGE_libnfnetlink=y
+CONFIG_PACKAGE_libnftnl=y
+CONFIG_PACKAGE_libmnl=y
+CONFIG_PACKAGE_libipset=y
+
+# ======================
+# 用户态工具包 - 系统工具
+# ======================
+CONFIG_PACKAGE_sed=y
+CONFIG_PACKAGE_gawk=y
+CONFIG_PACKAGE_grep=y
+CONFIG_PACKAGE_coreutils-sort=y
+
+# ======================
+# LuCI应用模块 (网络优化版)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-adblock-fast=y
 CONFIG_PACKAGE_luci-app-upnp=y
