--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -400,6 +400,7 @@ CONFIG_PACKAGE_kmod-nft-chain-nat=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 # CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-nat6=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 
 # ======================
 # 内核模块配置 - Connection Tracking
