--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -113,6 +113,7 @@ CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_gawk=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_coreutils-sort=y
+CONFIG_PACKAGE_smartdns=y
 
 # ======================
 # LuCI应用模块 (网络优化版)
