--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -20,13 +20,18 @@ CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta"
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta -falign-functions=32 -falign-jumps=32 -falign-loops=32"
 
 # ======================
 # 网络协议栈硬件卸载
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_TX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_GENERIC_IRQ_MIGRATION=y
 
 # ======================
 # 硬件流量分类与QoS卸载
@@ -81,6 +86,7 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
 # 用户态工具包 - Netfilter管理工具
