--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -14,13 +14,22 @@ CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=1
 
 # ======================
-# 编译工具链优化
+# GCC 14 编译工具链配置
+# ======================
+CONFIG_TOOLCHAINOPTS=y
+CONFIG_GCC_USE_VERSION_14=y
+CONFIG_GCC_VERSION="14"
+CONFIG_GCC_USE_GRAPHITE=y
+CONFIG_GCC_DEFAULT_PIE=y
+CONFIG_GCC_DEFAULT_SSP=y
+
+# ======================
+# 优化配置
 # ======================
 CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_TOOLCHAINOPTS=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta -falign-functions=32 -falign-jumps=32 -falign-loops=32"
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta -falign-functions=32 -falign-jumps=32 -falign-loops=32 -fstack-protector-strong -fcf-protection=full -fstack-clash-protection"
 
 # ======================
 # 网络协议栈硬件卸载
