更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -48,6 +48,13 @@ CONFIG_NET_SCH_FQ=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=y
 CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_ZERO_COPY=y
+CONFIG_SCHED_EEVDF=y
+CONFIG_NET=y
+CONFIG_BLOCK=y
+CONFIG_SENDFILE=y
+CONFIG_MMAP=y
+CONFIG_DMA_ENGINE=y
 
 # ======================
 # 内核模块配置 - Netfilter核心模块
