更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -40,6 +40,7 @@ CONFIG_NET_TX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
+CONFIG_NETFILTER_XT_TARGET_FULLCONENAT=y
 
 # ======================
 # 硬件流量分类与QoS卸载
