--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -41,6 +41,20 @@ CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_NETFILTER_XT_TARGET_FULLCONENAT=y
+CONFIG_NF_NAT_FULLCONE=y
+CONFIG_NFT_FULLCONE=y
+CONFIG_NFT_NAT=y
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_NAT=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_NAT=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_IPV6=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_SUBTREES=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
 
 # ======================
 # 硬件流量分类与QoS卸载
