更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -65,6 +65,12 @@ CONFIG_NET_SCH_CAKE=y
 CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_ZERO_COPY=y
 CONFIG_SCHED_EEVDF=y
+CONFIG_SCHED_CORE=y
+CONFIG_FAIR_GROUP_SCHED=y
+CONFIG_SCHED_AUTOGROUP=y
+CONFIG_SCHED_DEBUG=y
+CONFIG_SCHEDSTATS=y
+CONFIG_SMP=y
 CONFIG_NET=y
 CONFIG_BLOCK=y
 CONFIG_SENDFILE=y
