--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -40,7 +40,6 @@ CONFIG_NET_TX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
-CONFIG_NETFILTER_XT_TARGET_FULLCONENAT=y
 CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NFT_FULLCONE=y
 CONFIG_NFT_NAT=y
@@ -50,11 +49,6 @@ CONFIG_NETFILTER_XT_NAT=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
-CONFIG_IPV6=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
 
 # ======================
 # 硬件流量分类与QoS卸载
@@ -71,9 +65,8 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
 CONFIG_SMP=y
+CONFIG_SMT=y
 CONFIG_NET=y
-CONFIG_BLOCK=y
-CONFIG_SENDFILE=y
 CONFIG_MMAP=y
 CONFIG_DMA_ENGINE=y
 
@@ -117,7 +110,6 @@ CONFIG_PACKAGE_kmod-nf-socket=y
 # ======================
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-flower=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
