更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -29,10 +29,12 @@ CONFIG_GCC_DEFAULT_SSP=y
 CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
+CONFIG_LTO_MODE_FULL=y
 
 # ======================
 # 网络协议栈硬件卸载
 # ======================
+CONFIG_TCP_CONG_BBR=y
 CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_NET_RX_BUSY_POLL=y
@@ -40,15 +42,12 @@ CONFIG_NET_TX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
-CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NFT_FULLCONE=y
 CONFIG_NFT_NAT=y
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_XTABLES=y
-CONFIG_NETFILTER_XT_NAT=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_NAT=y
-CONFIG_NF_NAT_NEEDED=y
 
 # ======================
 # 硬件流量分类与QoS卸载
@@ -56,19 +55,21 @@ CONFIG_NF_NAT_NEEDED=y
 CONFIG_NET_SCH_FQ=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=y
+CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_ZERO_COPY=y
 CONFIG_SCHED_EEVDF=y
+CONFIG_PSI=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_SCHED_CORE=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_DEBUG=y
-CONFIG_SCHEDSTATS=y
 CONFIG_SMP=y
 CONFIG_SMT=y
 CONFIG_NET=y
 CONFIG_MMAP=y
 CONFIG_DMA_ENGINE=y
+CONFIG_AIO=y
 
 # ======================
 # 内核模块配置 - Netfilter核心模块
