更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -24,40 +24,12 @@ CONFIG_GCC_DEFAULT_PIE=y
 CONFIG_GCC_DEFAULT_SSP=y
 
 # ======================
-# 优化配置
+# 内核优化配置
 # ======================
 CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
 CONFIG_LTO_MODE_FULL=y
-
-# ======================
-# 网络协议栈硬件卸载
-# ======================
-CONFIG_TCP_CONG_BBR=y
-CONFIG_KERNEL_TCP_CONG_BBR=y
-CONFIG_DEFAULT_TCP_CONG="bbr"
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_TX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=192
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_GENERIC_IRQ_MIGRATION=y
-CONFIG_NFT_FULLCONE=y
-CONFIG_NFT_NAT=y
-CONFIG_NETFILTER=y
-CONFIG_NETFILTER_XTABLES=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_NAT=y
-
-# ======================
-# 硬件流量分类与QoS卸载
-# ======================
-CONFIG_NET_SCH_FQ=y
-CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_CAKE=y
-CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_HW=y
-CONFIG_ZERO_COPY=y
 CONFIG_SCHED_EEVDF=y
 CONFIG_PSI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
@@ -66,34 +38,56 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SMP=y
 CONFIG_SMT=y
-CONFIG_NET=y
 CONFIG_MMAP=y
 CONFIG_DMA_ENGINE=y
 CONFIG_AIO=y
+CONFIG_ZERO_COPY=y
 
 # ======================
-# 内核模块配置 - Netfilter核心模块
+# 网络核心配置
+# ======================
+CONFIG_NET=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_GENERIC_IRQ_MIGRATION=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_KERNEL_TCP_CONG_BBR=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_TX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=192
+
+# ======================
+# Netfilter/Networking 配置
+# ======================
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_NAT=y
+CONFIG_NFT_FULLCONE=y
+CONFIG_NFT_NAT=y
+CONFIG_NF_FLOW_TABLE=y
+CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_NET_SCH_FQ=y
+CONFIG_NET_SCH_FQ_CODEL=y
+
+# ======================
+# 内核模块 - Netfilter 核心
 # ======================
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-queue=y
-CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-fib=y
 CONFIG_PACKAGE_kmod-nft-ct=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-reject=y
-
-# ======================
-# NFTables 增强内核模块
-# ======================
 CONFIG_PACKAGE_kmod-nft-chain-nat=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 
 # ======================
-# 内核模块配置 - Connection Tracking
+# 内核模块 - 连接跟踪与NAT
 # ======================
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
@@ -107,55 +101,44 @@ CONFIG_PACKAGE_kmod-nf-tproxy=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 
 # ======================
-# 内核模块配置 - 调度与QoS
+# 内核模块 - 调度与网络
 # ======================
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
-# 用户态工具包 - Netfilter管理工具
+# 用户态工具 - Netfilter 管理
 # ======================
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_conntrack=y
+CONFIG_PACKAGE_ip6tables=y
 
 # ======================
-# 用户态工具包 - 网络基础工具
+# 用户态工具 - 网络基础
 # ======================
+CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ip-full=y
 
 # ======================
-# 用户态工具包 - Netfilter库依赖
+# 用户态库依赖
 # ======================
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libipset=y
-CONFIG_PACKAGE_ip6tables=y
 
 # ======================
-# 用户态工具包 - 系统工具
-# ======================
-CONFIG_PACKAGE_sed=y
-CONFIG_PACKAGE_gawk=y
-CONFIG_PACKAGE_grep=y
-CONFIG_PACKAGE_coreutils-sort=y
-
-# ======================
-# LuCI应用模块 (网络优化版)
+# LuCI 应用模块
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-app-adblock-fast=y
